# ClassificationFruitVegQuality

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml
classificationfruitvegquality/data/processed/: dummy_processed.py
classificationfruitvegquality/data/raw/: __init__.py  dummy_raw.py
classificationfruitvegquality/lightning_logs/FruitVegEffNet_logs20240704-062152/version_0/: events.out.tfevents.1720074112.cfedf2823f9b.20460.0
classificationfruitvegquality/lightning_logs/FruitVegMobNet_logs20240704-094947/version_0/: events.out.tfevents.1720086587.d45a8fd45b50.10029.0
classificationfruitvegquality/lightning_logs/FruitVegSqueezeNet_logs20240704-103147/version_0/: events.out.tfevents.1720089107.d45a8fd45b50.26575.0
classificationfruitvegquality/lightning_logs/version_0/: metrics.csv
classificationfruitvegquality/src/: __init__.py
classificationfruitvegquality/src/dataset_scripts/: dataset_augmentation.py
classificationfruitvegquality/src/modeling/: __init__.py  predict.py  test.py  train.py
data/: __init__.py
data/processed/: __init__.py
lightning_logs/FruitVegEffNet_logs20240703-104456/version_0/: events.out.tfevents.1719996298.DESKTOP-HVETKG4.6492.0
lightning_logs/FruitVegEffNet_logs20240704-054944/version_0/: events.out.tfevents.1720072184.cfedf2823f9b.8552.0
lightning_logs/FruitVegEffNet_logs20240704-062208/version_0/: events.out.tfevents.1720074128.cfedf2823f9b.20790.0
lightning_logs/FruitVegEffNet_logs20240704-111124/version_0/: events.out.tfevents.1720091484.d45a8fd45b50.42429.0
lightning_logs/FruitVegMobNet_logs20240703-181851/version_0/: events.out.tfevents.1720030731.a73ab3a778aa.43988.0
lightning_logs/FruitVegSqueezeNet_logs20240704-075755/version_0/: events.out.tfevents.1720079875.cfedf2823f9b.50738.0
models/: dummy_model.py
models/fruit_veg_squeezenet/: epoch=23-val_loss=0.33.ckpt  epoch=24-val_loss=0.44.ckpt
notebooks/: dummy_notebook.py  example.ipynb
src/: data_module.py
src/dataset_scripts/: __init__.py  dataset_augmentation.py  download_dataset.py
src/modeling/: predict.py  test.py  train.py
src/modeling/models/: FruitVegEffNet.py  FruitVegMobileNet.py  FruitVegSqueezeNet.py
