[tool.poetry]
name = "classification-of-vegetable-and-fruit-quality"
version = "0.1.0"
description = "Group project for computer vision PJAIT course"
authors = [
    "Szymon Szczurowski <szczurowskiszymo@gmail.com>",
    "Szymon Sztreja <szymonsztreja@gmail.com>",
    "Mateusz Szulist <s24718@pjwstk.edu.pl>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kaggle = "^1.6.14"
numpy = "1.26.4"
torch = "2.2.0"
torchvision = "0.17.0"
pytorch-lightning = "2.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
