[tool.poetry]
name = "classificationfruitvegquality"
version = "0.1.0"
description = "Group project for computer vision PJAIT course"
authors = [
    "Szymon Szczurowski <szczurowskiszymo@gmail.com>",
    "Szymon Sztreja <szymonsztreja@gmail.com>",
    "Mateusz Szulist <s24718@pjwstk.edu.pl>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.6.14"
numpy = "1.26.4"
torch = {version = "^2.3.1+cu121", source = "pytorch"}
pytorch-lightning = "^2.3.1"
torchvision = "^0.18.1"
tensorboard = "^2.17.0"
matplotlib = "^3.9.1"
albumentations = "^1.4.10"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
jupyter = "^1.0.0"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
